--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,8 @@
     "from scipy.linalg import eigh,eig,eigvals\n",
     "from scipy.optimize import linprog\n",
     "import matplotlib.pyplot as plt\n",
-    "from copy import deepcopy"
+    "from copy import deepcopy\n",
+    "from itertools import permutations"
    ]
   },
   {
@@ -1217,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1349,9 +1350,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# IMPORT THE DATA:\n",
+    "NN = np.array([[0, 1, 1, 0, 0, 0],\n",
+    "               [0, 0, 0, 1, 0, 1],\n",
+    "               [0, 0, 0, 0, 1, 0],\n",
+    "               [0, 0, 0, 0, 0, 1],\n",
+    "               [0, 0, 0, 0, 0, 1],\n",
+    "               [0, 0, 0, 0, 0, 0]])\n",
+    "\n",
+    "\n",
+    "# DATA MANIPULATION:\n",
+    "\n",
+    "C = np.matrix([2,1,2,5,2,1,2])\n",
+    "\n",
+    "Aeq, arc_idxs = nn2na(NN)\n",
+    "\n",
+    "beq = np.array([1, 0, 0, 0, 0, -1])\n",
+    "\n",
+    "t=np.matrix([[3,1,3,1,3,3,5]])\n",
+    "\n",
+    "T=8\n",
+    "\n",
+    "lambda_=np.linspace(0,1,200)\n",
+    "bounds = tuple([(0, None) for arcs in range(0, Aeq.shape[1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimum lagrangian multipliers λ  is 0.00 :\n",
+      "The optimum lagrangian L(λ)  is : 3.00 \n"
+     ]
+    }
+   ],
    "source": [
     "T=8\n",
     "\n",
@@ -1363,7 +1404,6 @@
     "\n",
     "while diff >tol:\n",
     "    \n",
-    "    \n",
     "    # OPTIMIZE:\n",
     "    C_monio=(C.T +lambda_i * t.T).T\n",
     "    \n",
@@ -1372,33 +1412,39 @@
     "    Lagrange= res.fun - lambda_i*T\n",
     "    \n",
     "    \n",
-    "    gradiente=( t@res.x  -T)[0,0]\n",
+    "    gradiente=( t @ res.x  -T)[0,0]\n",
     "    \n",
     "    \n",
     "    step=1/i\n",
+    "    \n",
     "    \n",
     "    lambda_0=lambda_i\n",
     "    \n",
     "    lambda_i = lambda_0 + step*gradiente\n",
     "    \n",
+    "    lambda_i=max(0,lambda_i)\n",
+    "    \n",
     "    diff = lambda_i - lambda_0\n",
     "    \n",
     "    i+=1\n",
-    "    \n"
+    "    \n",
+    "print(\"The optimum lagrangian multipliers λ  is %0.2f :\" % lambda_i )\n",
+    "\n",
+    "print(\"The optimum lagrangian L(λ)  is : %0.2f \" % Lagrange)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.0"
+       "0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1464,7 @@
        "3.0"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
